# oop_misis_works_2022

./: .gitignore  2.cpp  2.h  3.cpp  3.h  README.md  git  kek.w  x
AfanasevMA/: .gitignore  CMakeLists.txt
AfanasevMA/contest1/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp
AfanasevMA/contest2/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp
AfanasevMA/contest3/: a.cpp  b.cpp  c.cpp
AfanasevMA/control_work/: CMakeLists.txt
AfanasevMA/control_work/tasks/: 1.cpp  1.h  2.cpp  3.cpp  3.h  4.cpp
AfanasevMA/lab1/: rational.cpp  rational.h  task1.cpp  task10.cpp  task11.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
Bazanova/: CMakeLists.txt
Boldyrev/: CMakeLists.txt  Source.cpp  main.cpp
Boldyrev/contest1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
Boldyrev/contest2/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp
Boldyrev/contest3/: a.cpp  b.cpp  c.cpp
Boldyrev/control_work/: 1.cpp  2.cpp  3.cpp  4.cpp
Boldyrev/rational/: CMakeLists.txt  Main.cpp  Rational.cpp  Rational.h
Boldyrev/test/: CMakeLists.txt  header.h  main.cpp
BroninaAO/: Source.cpp  main.cpp
BroninaAO/contest/: CMakeLists.txt  a.cpp  b.cpp
BroninaAO/control_work/: 1.cpp  1.h  2.cpp  3.cpp  4.cpp
BroninaAO/rational/: CMakeLists.txt  Main.cpp  Rational.cpp  Rational.h
ButakovBI/: Source.cpp  main.cpp
ButakovBI/Contest_3_Numerical_Methods/: A.cpp  B.cpp  C.cpp
ButakovBI/Contest_Queues_Sets_Displays/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
ButakovBI/Rational/: Main.cpp  Rational.cpp  Rational.h
ButakovBI/control_work/: 2.cpp  4.cpp
ButakovBI/Задачи с контеста Массивы, строки/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
BykovAO/: CMakeLists.txt  Header.h  Source.cpp  main.cpp  rational.h
BykovAO/Cont/: 1.cpp  2.cpp  3.cpp  4.cpp
DliaSlavika/: task1.cpp  task2.cpp  task2b.cpp
EgorovDE/control-work/: 1.cpp  2.cpp  3.cpp
EgorovDV/Contest 1/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
EgorovDV/Contest 2/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
FadeevAU/: HelloWorld.cpp
GorbushinDA/: Header.h  main.cpp
GorbushinDA/contest2/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  g.cpp
GorbushinDA/contest3/: CMakeLists.txt  a.cpp  b.cpp  c.cpp
GorbushinDA/control_work/: 1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt
GorbushinDA/rational/: CMakeLists.txt  Rational.cpp  Rational.h  main.cpp
IvanMatveev/control_work/: 1.cpp  2.cpp  4.cpp
KR231/: main1.cpp  main2.cpp  main3.cpp  main4.cpp
Kazarin/: CMakeLists.txt  HelloWorld.h  Test.cpp
Kazarin/Rational/: Rational.cpp  Rational.h  main.cpp
KniazevaSA/: CMakeLists.txt  main.cpp
Kondratev Control Work/: 1.cpp  2.cpp  3.cpp  4.cpp  CMakeLists.txt
Kondratev_A_A/: CMakeLists.txt  Header.h  Source.cpp
Kondratev_A_A/Contest 2 (Queue, set)/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp
Kondratev_A_A/Contest 3 (Numerical methods)/: A.cpp  B.cpp  C.cpp  CMakeLists.txt
KuliasovIA/: Source.cpp  main.cpp
Makshanov/: README.md
MatveevID/: main.cpp
Nikolina_lab/: Rational.cpp  Rational.h  main.cpp
Pochuev_classRational/: main.cpp
ProninSM/: Source.cpp
Rationalnumbers/: CMakelists.txt  Rational.cpp  Rational.h  main2.cpp
RomanDavidson/: CMakeLists.txt  Header.h  header.cpp  main.cpp
SecCont/: A.cpp  B.cpp  D.cpp  E.cpp  F.cpp  G.cpp
TestShaminoyi/: Header.h  Source.cpp  main.cpp
VoenkovVE/: Header.h  Source.cpp  main.cpp
bred/: asciiDecode.cpp
contest_containers/: planets.cpp  prefix.cpp  skidrivertimelim.cpp  snackstimelim.cpp  tennis.cpp  traintimelim.cpp  wordsgame.cpp
contest_massives/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp
control_work/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
controlwork/: 1.cpp  2-2.cpp  2.cpp  3.cpp  4.cpp
cppACM/: slavaloh.cpp
icpc/: source.cpp
numbersmeth/: bomb.cpp  polar.cpp
teilor/: notbadteilor.cpp
(+267 files in other folders)
